# Fake-News-Investigation

./: .dockerignore  .env.security.example  .gitignore  .security.yml  Dockerfile  HACKATHON.md  README.md  __init__.py  bandit-report-fresh.json  bandit-report.json  bandit-verification.json  baseline.py  benchmark_results.json  client.py  inference.py  models.py  openenv.yaml  pip-audit-fresh.json  pip-audit-report.json  pyproject.toml  security-summary.json  security_scan_results.json  security_scan_results_current.json
.github/workflows/: security.yml  test.yml
backup_20260407_234304/: app.py  current-safety.json
data/: setup_data.py  setup_data.py.backup.20260407_232103  setup_data.py.tmp  setup_fever.py  setup_sources.py
docs/: architecture.mmd  demo_video_script.md  performance.md
frontend/: index.html
notebooks/: getting_started.py
outputs/: agent_stats.json
scripts/: apply_security_fixes.sh  benchmark.py  fix_security_vulnerabilities.sh  security_fixes.sh  train_agent.py  train_ppo.py
server/: adversarial.py  app.py  claim_manager.py  credibility_checker.py  environment.py  grading_engine.py  requirements.txt  translation.py
server/databases/: __init__.py  base.py  claims.py  entities.py  evidence.py  images.py  sources.py  temporal.py  trajectories.py
server/ml/: __init__.py  clip_mm.py  nli.py  phash.py  url_validator.py
tests/: test_app_endpoints.py  test_databases.py  test_environment.py  test_grading_engine.py  test_inference_format.py  test_ml.py  test_new_actions.py  test_new_features.py  test_retrievers.py
(+5 files in other folders)
