[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-investigator"
version = "1.0.0"
description = "An OpenEnv environment for training AI agents to investigate and verify factual claims"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0,<0.3.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.scripts]
server = "fake_news_investigator.server.app:main"

[project.optional-dependencies]
baseline = [
    "openai>=2.7.2",
]
